recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:9: error: missing arguments for method spiral in class Spiral;
follow this method with `_' if you want to treat it as a partially applied function
	spiral(steps, 90, length, 3)=spiral(steps-1, 90, length +3, 3)
        ^